--- a/app/src/main/res/layout/activity_application_message.xml
+++ b/app/src/main/res/layout/activity_application_message.xml
@@ -19,7 +19,8 @@
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_gravity="center"
-        android:src="@drawable/tubiao" />
+        android:src="@drawable/tubiao"
+        android:contentDescription="@string/app_name"/>
 
     <TextView
         android:id="@+id/about_version"
@@ -33,7 +34,8 @@
         android:padding="5dp"
         android:text="ADGIG  v1.0"
         android:textSize="16sp"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        tools:ignore="HardcodedText"/>
 
     <LinearLayout
         android:layout_marginTop="30dp"
@@ -54,6 +56,7 @@
             android:gravity="center|start"
             android:padding="16dp"
             android:text="用户指南"
+            tools:ignore="HardcodedText"
             android:textSize="16sp" />
 
         <TextView
@@ -65,6 +68,7 @@
             android:gravity="center_vertical|start"
             android:padding="16dp"
             android:text="给应用评分"
+            tools:ignore="HardcodedText"
             android:textSize="16sp" />
 
 
@@ -77,6 +81,7 @@
             android:gravity="center_vertical|start"
             android:padding="16dp"
             android:text="分享"
+            tools:ignore="HardcodedText"
             android:textSize="16sp" />
     </LinearLayout>
 </LinearLayout>
@@ -89,5 +94,6 @@
         android:layout_marginBottom="8dp"
         android:padding="5dp"
         android:text="我的广告管理"
+        tools:ignore="HardcodedText"
         android:textSize="14sp" />
 </FrameLayout>
