--- a/app/src/main/res/layout/activity_edit_user.xml
+++ b/app/src/main/res/layout/activity_edit_user.xml
@@ -18,7 +18,7 @@
         android:layout_height="match_parent">
         <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingTop="10dp">
@@ -37,6 +37,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginStart="15dp"
                     android:text="头像"
+                    tools:ignore="HardcodedText"
                     android:textColor="#454343" />
 
                 <de.hdodenhof.circleimageview.CircleImageView
@@ -47,16 +48,17 @@
                     android:layout_marginBottom="10dp"
                     android:layout_marginEnd="5dp"
                     android:layout_marginTop="10dp"
-                    android:layout_toLeftOf="@+id/ic_right" />
+                    android:layout_toStartOf="@+id/ic_right" />
 
                 <ImageView
                     android:id="@+id/ic_right"
                     android:layout_width="30dp"
                     android:layout_height="35dp"
-                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="5dp"
-                    android:src="@mipmap/ql_right" />
+                    android:layout_marginEnd="5dp"
+                    android:src="@mipmap/ql_right"
+                    android:contentDescription="@string/app_name"/>
             </RelativeLayout>
 
             <LinearLayout
@@ -71,6 +73,7 @@
                     android:layout_gravity="center"
                     android:layout_marginStart="15dp"
                     android:text="昵称:"
+                    tools:ignore="HardcodedText"
                     android:textColor="#454343" />
 
                 <EditText
@@ -81,8 +84,10 @@
                     android:gravity="center_vertical"
                     android:hint="我的昵称"
                     android:lines="1"
-                    android:paddingLeft="15dp"
-                    android:textSize="15sp" />
+                    android:paddingStart="15dp"
+                    android:paddingEnd="0dp"
+                    android:textSize="15sp"
+                    tools:ignore="HardcodedText"/>
             </LinearLayout>
 
             <TextView
@@ -104,7 +109,8 @@
                     android:layout_gravity="center"
                     android:layout_marginStart="15dp"
                     android:text="地区:"
-                    android:textColor="#454343" />
+                    android:textColor="#454343"
+                    tools:ignore="HardcodedText"/>
 
                 <TextView
                     android:id="@+id/edit_area"
@@ -115,8 +121,10 @@
                     android:gravity="center_vertical"
                     android:text="未编辑"
                     android:lines="1"
-                    android:paddingLeft="15dp"
-                    android:textSize="15sp" />
+                    android:paddingStart="14dp"
+                    android:paddingEnd="0dp"
+                    android:textSize="15sp"
+                    tools:ignore="HardcodedText"/>
             </LinearLayout>
 
             <TextView
@@ -138,7 +146,8 @@
                     android:layout_gravity="center"
                     android:layout_marginStart="15dp"
                     android:text="性别:"
-                    android:textColor="#454343" />
+                    android:textColor="#454343"
+                    tools:ignore="HardcodedText"/>
 
                 <TextView
                     android:id="@+id/edit_sex"
@@ -148,8 +157,10 @@
                     android:clickable="true"
                     android:gravity="center_vertical"
                     android:lines="1"
-                    android:paddingLeft="15dp"
+                    android:paddingStart="15dp"
+                    android:paddingEnd="0dp"
                     android:text="神秘人"
+                    tools:ignore="HardcodedText"
                     android:textSize="15sp" />
             </LinearLayout>
 
@@ -172,6 +183,7 @@
                     android:layout_gravity="center"
                     android:layout_marginStart="15dp"
                     android:text="生日:"
+                    tools:ignore="HardcodedText"
                     android:textColor="#454343" />
 
                 <TextView
@@ -182,8 +194,10 @@
                     android:clickable="true"
                     android:gravity="center_vertical"
                     android:lines="1"
-                    android:paddingLeft="15dp"
+                    android:paddingStart="15dp"
+                    android:paddingEnd="0dp"
                     android:text="未知"
+                    tools:ignore="HardcodedText"
                     android:textSize="15sp" />
             </LinearLayout>
 
@@ -206,6 +220,7 @@
                     android:layout_gravity="center"
                     android:layout_marginStart="15dp"
                     android:text="手机:"
+                    tools:ignore="HardcodedText"
                     android:textColor="#454343" />
 
                 <TextView
@@ -216,8 +231,10 @@
                     android:gravity="center_vertical"
                     android:clickable="true"
                     android:lines="1"
-                    android:paddingLeft="15dp"
+                    android:paddingStart="15dp"
+                    android:paddingEnd="0dp"
                     android:text="未知"
+                    tools:ignore="HardcodedText"
                     android:textSize="15sp" />
             </LinearLayout>
 
@@ -240,6 +257,7 @@
                     android:layout_gravity="center"
                     android:layout_marginStart="15dp"
                     android:text="邮箱:"
+                    tools:ignore="HardcodedText"
                     android:textColor="#454343" />
 
                 <EditText
@@ -249,8 +267,10 @@
                     android:background="@drawable/item_selector"
                     android:gravity="center_vertical"
                     android:lines="1"
-                    android:paddingLeft="15dp"
+                    android:paddingStart="15dp"
+                    android:paddingEnd="0dp"
                     android:hint="未知"
+                    tools:ignore="HardcodedText"
                     android:textSize="15sp" />
             </LinearLayout>
 
@@ -268,6 +288,7 @@
                     android:layout_marginStart="15dp"
                     android:layout_marginTop="10dp"
                     android:text="个性说明:"
+                    tools:ignore="HardcodedText"
                     android:textColor="#454343" />
 
                 <EditText
@@ -275,11 +296,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:layout_toRightOf="@+id/gxqm"
+                    android:layout_toEndOf="@+id/gxqm"
                     android:background="@null"
                     android:hint="给自己起个闪亮的座右铭/签名吧..."
                     android:maxLines="3"
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
+                    tools:ignore="HardcodedText"
                     android:textSize="15sp" />
 
                 <TextView
@@ -290,7 +312,7 @@
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentEnd="true"
                     android:layout_margin="8dp"
-                    android:text="20" />
+                    />
             </RelativeLayout>
 
         </LinearLayout>
