--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,7 +53,8 @@
                 android:layout_gravity="center"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
-                android:src="@drawable/tubiao" />
+                android:src="@drawable/tubiao"
+                android:contentDescription="@string/app_name"/>
 
             <TextView
                 android:layout_marginTop="20dp"
@@ -61,9 +62,10 @@
                 android:layout_marginRight="10dp"
                 android:gravity="center"
                 android:layout_width="match_parent"
-                android:textSize="25dp"
+                android:textSize="25sp"
                 android:layout_height="wrap_content"
-                android:text="ADGIS" />
+                android:text="ADGIS"
+                tools:ignore="HardcodedText"/>
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
@@ -79,7 +81,7 @@
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:completionThreshold="1"
-                    android:singleLine="true" />
+                    tools:ignore="HardcodedText"/>
 
             </android.support.design.widget.TextInputLayout>
 
@@ -87,16 +89,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <EditText
+                <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                     android:id="@+id/password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="密码"
-                    android:imeActionLabel="@string/action_sign_in_short"
-                    android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
                     android:maxLines="1"
-                    android:singleLine="true" />
+                    tools:ignore="HardcodedText"/>
 
             </android.support.design.widget.TextInputLayout>
 
@@ -104,7 +104,8 @@
                 android:id="@+id/checkBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="记住密码" />
+                android:text="记住密码"
+                tools:ignore="HardcodedText"/>
 
             <Button
                 android:id="@+id/email_sign_in_button"
@@ -114,7 +115,8 @@
                 android:text="登陆"
                 android:background="@drawable/main_button"
                 android:textColor="@color/white"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:ignore="HardcodedText"/>
 
             <RelativeLayout
                 android:layout_marginTop="5dp"
@@ -127,23 +129,23 @@
                     android:layout_height="wrap_content"
                     android:text="新用户注册 "
                     android:clickable="true"
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     android:background="?android:attr/selectableItemBackground"
                     android:layout_alignParentTop="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true" />
+                    android:layout_alignParentEnd="true"
+                    tools:ignore="HardcodedText"/>
 
                 <TextView
                     android:id="@+id/forget_pass"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="忘记密码？ "
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     android:clickable="true"
                     android:background="?android:attr/selectableItemBackground"
                     android:layout_alignParentTop="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true" />
+                    android:layout_alignParentStart="true"
+                    tools:ignore="HardcodedText"/>
             </RelativeLayout>
         </LinearLayout>
         </LinearLayout>
