--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,27 +35,26 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/imageView"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_width="?attr/actionBarSize"
                 android:layout_height="?attr/actionBarSize"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true"
                 android:scaleType="centerCrop"
-                android:clickable="true"
-                />
+                android:clickable="true" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:text="@string/app_name"
+                android:text="ADGIS"
                 android:textColor="@android:color/black"
                 android:textSize="20sp"
-                android:id="@+id/textView"
+                android:id="@+id/ha"
                 android:layout_marginStart="18dp"
                 android:layout_centerVertical="true"
                 android:layout_toEndOf="@+id/imageView"
-                android:clickable="true"/>
+                android:clickable="true"
+                tools:ignore="HardcodedText"/>
             <ImageView
                 android:id="@+id/preferences"
                 android:layout_width="?attr/actionBarSize"
@@ -63,7 +62,8 @@
                 android:src="@drawable/ic_preferences"
                 android:background="?android:attr/selectableItemBackground"
                 android:scaleType="center"
-                android:layout_alignParentRight="true"/>
+                android:contentDescription="@string/app_name"
+                android:layout_alignParentEnd="true"/>
 
             <ImageView
                 android:id="@+id/search"
@@ -73,6 +73,7 @@
                 android:layout_toStartOf="@+id/preferences"
                 android:scaleType="center"
                 android:src="@drawable/ic_search"
+                android:contentDescription="@string/app_name"
                 android:background="?android:attr/selectableItemBackground"/>
 
         </RelativeLayout>
@@ -84,6 +85,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
             android:orientation="horizontal"
+            android:baselineAligned="false"
             tools:ignore="UselessParent">
 
             <LinearLayout
@@ -101,7 +103,8 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_gravity="center_horizontal"
-                    android:background = "@drawable/back_unpress" />
+                    android:background = "@drawable/back_unpress"
+                    android:contentDescription="@string/app_name"/>
 
                 <TextView
                     android:id="@+id/back_text"
@@ -110,7 +113,8 @@
                     android:layout_gravity="center_horizontal"
                     android:text="上一个位置"
                     android:textColor="@color/unPress"
-                    android:layout_marginBottom="2dip"/>
+                    android:layout_marginBottom="2dip"
+                    tools:ignore="HardcodedText"/>
             </LinearLayout>
 
             <LinearLayout
@@ -126,7 +130,8 @@
                     android:layout_marginTop="5dip"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:layout_gravity="center_horizontal" />
+                    android:layout_gravity="center_horizontal"
+                    android:contentDescription="@string/app_name"/>
 
                 <TextView
                     android:id="@+id/info_text"
@@ -134,6 +139,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:text="隐藏所有"
+                    tools:ignore="HardcodedText"
                     android:textColor="@color/unPress"
                     android:layout_marginBottom="2dip"/>
             </LinearLayout>
@@ -152,7 +158,8 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_gravity="center_horizontal"
-                    android:background = "@drawable/advance_unpress" />
+                    android:background = "@drawable/advance_unpress"
+                    android:contentDescription="@string/app_name"/>
 
                 <TextView
                     android:id="@+id/advance_text"
@@ -160,6 +167,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:text="下一个位置"
+                    tools:ignore="HardcodedText"
                     android:textColor="@color/unPress"
                     android:layout_marginBottom="2dip"/>
             </LinearLayout>
