--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -39,8 +38,9 @@
                     android:id="@+id/back1"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
-                    android:gravity="left"
-                    android:src="@drawable/close" />
+                    android:gravity="start"
+                    android:src="@drawable/close"
+                    android:contentDescription="@string/app_name"/>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -49,13 +49,15 @@
                     android:layout_marginTop="10dp"
                     android:gravity="start"
                     android:text="输入手机号码"
-                    android:textSize="40dp" />
+                    android:textSize="40sp"
+                    tools:ignore="HardcodedText"/>
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_marginTop="45dp"
-                    android:src="@drawable/phone" />
+                    android:src="@drawable/phone"
+                    android:contentDescription="@string/app_name"/>
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
@@ -71,7 +73,8 @@
                         android:imeActionLabel="@string/action_sign_in_short"
                         android:imeOptions="actionUnspecified"
                         android:inputType="phone"
-                        android:maxLines="1" />
+                        android:maxLines="1"
+                        tools:ignore="HardcodedText"/>
                     </android.support.design.widget.TextInputLayout>
 
                     <Button
@@ -81,10 +84,11 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/main_button"
                         android:textColor="@color/white"
-                        android:textSize="20dp"
+                        android:textSize="20sp"
                         android:text="下一步"
                         android:textStyle="bold"
-                        android:layout_marginBottom="10dp"/>
+                        android:layout_marginBottom="10dp"
+                        tools:ignore="HardcodedText"/>
             </LinearLayout>
 
             <LinearLayout
@@ -99,7 +103,8 @@
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:gravity="start"
-                    android:src="@drawable/close" />
+                    android:src="@drawable/close"
+                    android:contentDescription="@string/app_name"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -109,7 +114,8 @@
                     android:gravity="start"
                     android:layout_marginTop="10dp"
                     android:text="选择头像"
-                    android:textSize="40dp" />
+                    android:textSize="40sp"
+                    tools:ignore="HardcodedText"/>
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:layout_marginTop="10dp"
@@ -126,10 +132,11 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/main_button"
                     android:textColor="@color/white"
-                    android:textSize="20dp"
+                    android:textSize="20sp"
                     android:text="下一步"
                     android:textStyle="bold"
-                    android:layout_marginBottom="8dp"/>
+                    android:layout_marginBottom="8dp"
+                    tools:ignore="HardcodedText"/>
 
             </LinearLayout>
 
@@ -144,14 +151,14 @@
                     android:id="@+id/back3"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
-                    android:gravity="left"
-                    android:src="@drawable/close" />
+                    android:gravity="start"
+                    android:src="@drawable/close"
+                    android:contentDescription="@string/app_name"/>
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/user_icon"
                     android:layout_width="200dp"
                     android:layout_height="200dp"
-                    android:layout_centerInParent="true"
                     android:layout_gravity="center"
                     android:scaleType="centerCrop"/>
 
@@ -163,7 +170,8 @@
                     android:layout_marginTop="15dp"
                     android:gravity="center"
                     android:text="注册"
-                    android:textSize="25dp" />
+                    android:textSize="25sp"
+                    tools:ignore="HardcodedText"/>
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
@@ -181,7 +189,7 @@
                         android:imeOptions="actionUnspecified"
                         android:inputType="textPostalAddress"
                         android:maxLines="1"
-                        android:singleLine="true" />
+                        tools:ignore="HardcodedText"/>
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -189,7 +197,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <EditText
+                    <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                         android:id="@+id/register_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -199,7 +207,7 @@
                         android:imeOptions="actionUnspecified"
                         android:inputType="textPassword"
                         android:maxLines="1"
-                        android:singleLine="true" />
+                        tools:ignore="HardcodedText"/>
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -207,17 +215,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <EditText
+                    <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                         android:id="@+id/register_password1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="再次输入密码"
                         android:imeActionId="@+id/login"
                         android:imeActionLabel="@string/action_sign_in_short"
                         android:imeOptions="actionUnspecified"
+                        android:hint="再次输入密码"
                         android:inputType="textPassword"
                         android:maxLines="1"
-                        android:singleLine="true" />
+                        tools:ignore="HardcodedText"/>
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -228,10 +236,11 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/main_button"
                     android:textColor="@color/white"
-                    android:textSize="20dp"
+                    android:textSize="20sp"
                     android:text="注册"
                     android:textStyle="bold"
-                    android:layout_marginBottom="10dp"/>
+                    android:layout_marginBottom="10dp"
+                    tools:ignore="HardcodedText"/>
             </LinearLayout>
         </LinearLayout>
         </ScrollView>
