--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -25,7 +25,8 @@
                 android:scaleType="centerCrop"
                 android:fitsSystemWindows="true"
                 app:layout_collapseMode="parallax"
-                android:src="@drawable/main_setting"/>
+                android:src="@drawable/main_setting"
+                android:contentDescription="@string/app_name"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/setting_toolbar"
@@ -61,31 +62,34 @@
                     android:layout_centerVertical="true"
                     android:layout_marginStart="15dp"
                     android:text="清除缓存"
+                    tools:ignore="HardcodedText"
                     android:textColor="#454343"
                     android:textSize="16sp"/>
 
                 <TextView
+                    android:text=" "
                     android:id="@+id/show_CaChe"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
                     android:gravity="center"
                     android:layout_centerVertical="true"
                     android:layout_marginBottom="10dp"
-                    android:text="ha"
                     android:textColor="#454343"
                     android:layout_marginEnd="10dp"
                     android:layout_marginTop="10dp"
-                    android:layout_toLeftOf="@+id/ic_right"
-                    android:textSize="16sp"/>
+                    android:layout_toStartOf="@+id/ic_right"
+                    android:textSize="16sp"
+                    tools:ignore="HardcodedText"/>
 
                 <ImageView
                     android:id="@+id/ic_right"
                     android:layout_width="30dp"
                     android:layout_height="35dp"
-                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="5dp"
-                    android:src="@mipmap/ql_right" />
+                    android:layout_marginEnd="5dp"
+                    android:src="@mipmap/ql_right"
+                    android:contentDescription="@string/app_name"/>
             </RelativeLayout>
 
             <RelativeLayout
@@ -103,17 +107,19 @@
                     android:layout_marginStart="15dp"
                     android:text="反馈"
                     android:textColor="#454343"
+                    tools:ignore="HardcodedText"
                     android:textSize="16sp"/>
 
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="35dp"
-                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="5dp"
+                    android:layout_marginEnd="5dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
-                    android:src="@mipmap/ql_right" />
+                    android:src="@mipmap/ql_right"
+                    android:contentDescription="@string/app_name"/>
             </RelativeLayout>
 
             <RelativeLayout
@@ -130,18 +136,20 @@
                     android:layout_centerVertical="true"
                     android:layout_marginStart="15dp"
                     android:text="应用信息"
+                    tools:ignore="HardcodedText"
                     android:textColor="#454343"
                     android:textSize="16sp"/>
 
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="35dp"
-                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="5dp"
+                    android:layout_marginEnd="5dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
-                    android:src="@mipmap/ql_right" />
+                    android:src="@mipmap/ql_right"
+                    android:contentDescription="@string/app_name"/>
             </RelativeLayout>
 
             <RelativeLayout
@@ -158,18 +166,20 @@
                     android:layout_centerVertical="true"
                     android:layout_marginStart="15dp"
                     android:text="关于开发者"
+                    tools:ignore="HardcodedText"
                     android:textColor="#454343"
                     android:textSize="16sp"/>
 
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="35dp"
-                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="5dp"
+                    android:layout_marginEnd="5dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
-                    android:src="@mipmap/ql_right" />
+                    android:src="@mipmap/ql_right"
+                    android:contentDescription="@string/app_name"/>
             </RelativeLayout>
 
             <Button
@@ -184,6 +194,7 @@
                 android:background="@drawable/cancel_buttom"
                 android:padding="10dp"
                 android:text="退出登录"
+                tools:ignore="HardcodedText"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
