--- a/app/src/main/res/layout/ad_detail_popwindow.xml
+++ b/app/src/main/res/layout/ad_detail_popwindow.xml
@@ -24,7 +24,8 @@
                     android:id="@+id/locationImage"
                     android:scaleType="centerCrop"
                     android:layout_width="match_parent"
-                    android:layout_height="280dp" />
+                    android:layout_height="280dp"
+                    android:contentDescription="@string/app_name"/>
                 <ImageView
                     android:id="@+id/popDetail"
                     android:layout_width="30dp"
@@ -32,7 +33,8 @@
                     android:src="@drawable/ic_more_horiz_black"
                     android:background="?android:attr/selectableItemBackground"
                     android:layout_margin="5dp"
-                    android:layout_gravity="right"/>
+                    android:layout_gravity="end"
+                    android:contentDescription="@string/app_name"/>
                 </FrameLayout>
 
             <TextView
