--- a/app/src/main/res/layout/fragment_ads_company.xml
+++ b/app/src/main/res/layout/fragment_ads_company.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:ignore="HardcodedText"
     tools:context="com.xia.adgis.Main.Fragment.ADsCompanyFragment">
 
     <!-- TODO: Update blank fragment layout -->
