--- a/app/src/main/res/layout/left_nav_header.xml
+++ b/app/src/main/res/layout/left_nav_header.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:background="@drawable/userback"
     android:padding="10dp"
-    >
+    tools:ignore="HardcodedText">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/icon_image"
